--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,8 @@
         <div class="container d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
             <h1 class="fs-4">Internet acquiring</h1>
             <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none btn btn-success" href="/">IA HTML Form</a>
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none btn btn-success" href="/orders">DB Orders</a>
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none btn btn-secondary" href="/">IA HTML Form</a>
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none btn btn-secondary" href="/orders">DB Orders</a>
             </nav>
         </div>
         {% block body %}
